# ethernet-over-macca

./: .coverage  .gitignore  CLAUDE.md  README.md  REVIEW.md  SECURITY.md  chat-demo.sh  justfile  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
docs/: rfc-ethernet-over-macca.txt  rfc-generator.bf
src/: __init__.py  brainfuck_generator.py  encapsulation.py  examples.py  pdf_generator.py  protocol_stack.py
src/client/: __init__.py  http_client.py  tcp_client.py  ui.py
src/demo/: __init__.py  chat_demo.py  echo_demo.py  file_demo.py  ping_demo.py
src/eom_client/: __init__.py  http_client.py  tcp_client.py  ui.py
src/eom_server/: handlers.py  http_server.py  tcp_server.py
src/ethernet_over_macca/: __init__.py  encapsulation.py  protocol_stack.py
src/server/: __init__.py  handlers.py  http_server.py  tcp_server.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_bugs.py  test_client.py  test_http_server.py  test_integration.py  test_protocol.py  test_server.py  test_utilities.py  test_wire_protocol.py
